* add FaceBookOperations.kt to mange the all operation of facebook usage int the hole application * testing to login and share image to facebook account * getting the current location (lat,lon) * adding weather API and testing it using terminal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">RobustaWeatherApp</string>
     <string name="facebook_id">831848527418427</string>
+    <string name="fb_login_protocol_scheme">fb831848527418427</string>
+    <string name="my_shared_references">mySharedPreferences</string>
+    <string name="robusta">#Robusta</string>
+
 </resources>
