--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="fb_login_protocol_scheme">fb831848527418427</string>
     <string name="my_shared_references">mySharedPreferences</string>
     <string name="robusta">#Robusta</string>
+    <string name="thumbil">thumbil</string>
 
 </resources>
