*change design    *adding SplashScreenActivity.kt    *sprate histroy form main activity    *adding fullscreen method to view onitemClick *adding intro to explain the application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="my_shared_references">mySharedPreferences</string>
     <string name="robusta">#Robusta</string>
     <string name="thumbil">thumbil</string>
+    <string name="robusta_weather_application">Robusta Weather Application</string>
+    <string name="easy_get_your_current_location_weather_n_save_your_momery">Easy get your current location weather \n save your momery</string>
+    <string name="history">History</string>
 
 </resources>
